vishal-k8s/backenddeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: vishal-chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: chatapp-backend
          image: vishal2728/vishal-backend:alpine
          ports:
            - containerPort: 5001
