vishal-k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vishal-chatapp
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
