vishal-k8s/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: vishal-chatapp
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
